--- a/src/meta.css
+++ b/src/meta.css
@@ -1,4 +1,4 @@
 /**
  * Minima,
- * licensed under the MIT License <https://shreyas.mit-license.org/2017>
+ * licensed under the MIT License see /README.md#license
  */
